--- a/Ver20_Microglia_Annotation_Harmony.Rmd
+++ b/Ver20_Microglia_Annotation_Harmony.Rmd
@@ -18,12 +18,14 @@ library(harmony)
 library(SummarizedExperiment)
 library(SingleCellExperiment)
 library(muscat)
-# pipelining
+# pipeline and formatting
 library(dplyr)
 library(data.table)
 # plotting
 library(ggplot2)
 library(ggsci)
+library(ggsignif)
+library(networkD3)
 library(viridis)
 library(patchwork)
 library(sechm)
@@ -33,11 +35,25 @@ library(pheatmap)
 data_path <- "/Users/jiesun/Storage/Work/Projects/Microglial_annotation/Data"
 working_path <- "/Users/jiesun/Storage/Work/Projects/Microglial_annotation/Microglial-annotation"
 setwd(working_path)
+```
 
+```{r Do you want to save all data and visualization?}
 saving = FALSE
 ```
 
 ```{r define functions}
+
+#' Plot the ggplot for the percentage composition for different class in different 
+#' datasets. 
+#' 
+#' @param seuratObject the seurat object containing the data
+#' @param classLabel string indicating which metadata column in seurat object is for 
+#'    the class label (y-axis) for the tile plot
+#' @param dataLabel string indicating the metadata column for dataset label (x-axis)
+#' @param colorOption color option fot viridis. default is "G" but can change to
+#'    other letter 
+#'    
+#' @author Jieran Sun
 
 plotDataComposition <- function(seruatObject, classLabel, dataLabel, colorOption = "G") {
   ca <- data.table(table(cluster=unlist(seruatObject[[classLabel]]), 
@@ -51,6 +67,22 @@ plotDataComposition <- function(seruatObject, classLabel, dataLabel, colorOption
     coord_fixed(ratio = 0.25) +
     guides(fill = guide_colourbar(barwidth = 0.5,barheight = 18))
 }
+
+#' Plot a heatmap object using sechm package to indicate the expression level for 
+#' different marker genes with their corresponding cell type annotation
+#' 
+#' @param sceObject the singleCellExperiment object to input
+#' @param markerList the list of marker genes for plotting. The marker gene list 
+#'    should have corresponding cell type as their name. A typical list should 
+#'    contain several array objects for marker genes with each of them named by the 
+#'    corresponding cell types. 
+#' @param cellType string or list of string indicating which cell type(s) are used for 
+#'    plotting
+#' @param heatmapColor color option for heatmap in viridis
+#' @param gaps_col if adding column gaps in the heatmap (in the case of plotting
+#'    merged sceObject with different column indication)
+#'    
+#' @author Jieran Sun
 
 plotSpecificHeatmap <- function(sceObject, markerList, cellType = NULL, heatmapColor = "C", gaps_col = NULL){
   
@@ -76,7 +108,27 @@ plotSpecificHeatmap <- function(sceObject, markerList, cellType = NULL, heatmapC
              hmcols = viridis_pal(option = heatmapColor)(100))
 }
 
-# cluster, threshold, oldCellType, adjustedCellType should have the same length
+#' Adjusting the marker list assignment based on the heatmap expression. The heatmap
+#' expression is used as the heatmap counts are all normalized on a cluster level.
+#' By defining a threshold for the assignment, the function helps rearranging the 
+#' marker gene from the one cell type (oldCellType) to another (adjustedCellType)
+#' 
+#' @param heatmapObject the heatmap to use for adjusting the markergene assignment
+#' @param cluster which cluster expression is used to adjust the marker gene 
+#'    assignment level. it can be a string or a vector of string indicating the 
+#'    name of the cluster. If it is a vector of string, please make sure it have 
+#'    the same length as threshold, oldCellType and adjustedCellType 
+#' @param threshold double or vector of double indicating the threshold of expression 
+#'    for cluster reassignment
+#' @param oldCellType/adjustedCellType string or vector of string for the change of
+#'    marker gene assignment to cell type lists. should have the same length. names
+#'    in adjusted cell type should exist in the markerList
+#' @param visualization plot the histogram for the expression level in the cluster
+#' @param saving save the new marker list
+#' @param filePath if save the new marker list, what is the file path 
+#' 
+#' @author Jieran Sun
+
 AdjustMarkerAssignment <- function(heatmapObject, markerList, cluster, 
                                    threshold, oldCellType, adjustedCellType, 
                                    visualization = FALSE, saving = FALSE, filePath = NULL){
@@ -106,7 +158,33 @@ AdjustMarkerAssignment <- function(heatmapObject, markerList, cluster,
   return(newMarkerList)
 }
 
-# no. of cell type/legend <= 16!
+#' Plot the overall heatmap for the singleCellExperiment Object with different 
+#' colors indicating different cell type and a legend for information (optional)
+#' 
+#' @param sceObject the singleCellExperiment object to plot
+#' @param markerList the list of marker genes for plotting. The marker gene list 
+#'    should have corresponding cell type as their name. A typical list should 
+#'    contain several array objects for marker genes with each of them named by the 
+#'    corresponding cell types. 
+#' @param metaData an optional list corresponding the cell type acronym to the 
+#'    full name. metaData file is essentially a vector of character (full names)
+#'    with the acronym as the name for the characters. the full name will be used 
+#'    for the legend. If the metaData is NULL the system will just use the acronym 
+#'    from the markerlist as the legend name 
+#' @param showAll do we plot all the cell types in the markerList?
+#' @param cellType only if showAll is FALSE, we specify marker genes from which 
+#'    cell type to plot 
+#' @param heatmapColor color options from viridis
+#' @param clusterRow do we cluster the row? if so the makerGene-cellType correspondence
+#'    cannot be maintained 
+#' @param clusterCOl do we cluster the column such that similar cell type/cluster are 
+#'    plot next to each other
+#' @param showLegend if we want to show legend
+#' 
+#' @author Jieran Sun
+#' 
+#' Notice: no. of cell type/legend <= 16! (for color plotting purpose)
+
 showOverallHeatmap <- function(sceObject, markerList, metaData, showAll = TRUE, cellType = NULL, 
                                heatmapColor = "C", clusterRow = FALSE, clusterCol = TRUE,
                                showLegend = TRUE) {
@@ -119,7 +197,11 @@ showOverallHeatmap <- function(sceObject, markerList, metaData, showAll = TRUE, 
   
   if (showLegend == TRUE) {
     # Generate heatmap block and anntoation color
-    cellname <- c(metaData[names(markerList)])
+    if(is.null(metaData)) {
+      cellname <- names(markerList)
+    } else {
+      cellname <- c(metaData[names(markerList)])
+    }
     
     # Set up the color for the heatmap 
     legendColors <- pal_simpsons()(length(cellname))
@@ -148,6 +230,22 @@ showOverallHeatmap <- function(sceObject, markerList, metaData, showAll = TRUE, 
   }
 }
 
+#' Find the top expression genes in each cluster/cell type in the sceObject
+#' 
+#' @param sceObject singleCellExperiment object. The object should be aggregated 
+#'    already with column indicating cell types or clusters 
+#' @param markerlist the list of marker genes for plotting. The marker gene list 
+#'    should have corresponding cell type as their name. A typical list should 
+#'    contain several array objects for marker genes with each of them named by the 
+#'    corresponding cell types. 
+#' @param n number of top expression gene to return 
+#' @param allMarker do we return all the marker gene on the list?
+#' @param cellType if allMarker is FALSE, which cell type of genes should we return
+#' 
+#' @return a data table with column as the cluster/cell type depending on the column of
+#'    the sceObject. And n number of rows indicating which genes are the most expressing
+#' 
+#' @author Jieran Sun
 
 findTopGenes <- function(sceObject, markerlist, n = 20, allMarker = TRUE, cellType = NULL){
   if (allMarker != TRUE) {
@@ -164,8 +262,25 @@ findTopGenes <- function(sceObject, markerlist, n = 20, allMarker = TRUE, cellTy
   return(topMat)
 }
  
+#' Plot a list of Violin plot/Ridge plot/Heatmap plot given a list of genes. 
+#' 
+#' @param conutObject either the seurat object (for violin and ridge plot) or the
+#'    sceObject (for the heatmap plot)
+#' @param feature_list essentially the markerList in the previous functions
+#' @param plot_type type of plot to return, can be Violin plot ("Vln"), ridge 
+#'    plot ("Rdg"), and heatmap ("Heatmap")
+#' @param group_var columns on the metadata file in the seurat object indicating 
+#'    if we're using clusters or cell types (for heatmap it can be NULL, but it 
+#'    need to be used for the pdf generated if saving is TRUE, so maybe just 
+#'    keep it as the same way)
+#' @param saving if we want to save the final results
+#' 
+#' @return a list of plots based on the parameters
+
+
 plotMarkerList <- function(countObject, feature_list, plot_type = c("Vln", "Rdg", "Htm"), 
                            group_var = "seurat_clusters", saving = FALSE){
+  
   Plot_list <- lapply(seq_len(length(feature_list)), function(ind) {
     feature <- feature_list[[ind]]
     if (plot_type == "Vln") {
@@ -176,7 +291,7 @@ plotMarkerList <- function(countObject, feature_list, plot_type = c("Vln", "Rdg"
       Plot <- RidgePlot(countObject, features = feature, 
                 group.by = sprintf("%s", group_var), cols = pal_simpsons()(16)) + 
         plot_annotation(title = sprintf("list_%s", ind))
-    } else if (plot_type = "Htm") {
+    } else if (plot_type == "Htm") {
       Plot <- sechm::sechm(countObject, feature, 
              assayName = "logcounts", cluster_cols = FALSE,
              show_colnames = TRUE, do.scale = TRUE, na_col = "black",
@@ -197,7 +312,6 @@ plotMarkerList <- function(countObject, feature_list, plot_type = c("Vln", "Rdg"
   return(Plot_list)
 }
 ```
-
 
 ## Data creation and input
 
@@ -340,7 +454,7 @@ if (old_way_loading){
 ```
 
 
-```{r, Overall Heatmap for features}
+```{r Overall Heatmap for features}
 
 #' If we plot the overall heatmap (The process is time-consuming and require computing power), notice 
 #' the large heatmap only provide limited information and is very time-consuming. By default we don't
@@ -464,7 +578,6 @@ plot_labelCali <- DimPlot(seurat_combi, group.by = "cluster_calibrated",pt.size 
 ## Visualization and result storage
 
 ```{r cell-type specific heatmap function}
-
 (hmCluster <- showOverallHeatmap(sce_cluster, markerList = exist_list, metaData = meta_data))
 (hmClusterGene <- showOverallHeatmap(sce_cluster, markerList = exist_list, metaData = meta_data, clusterRow = TRUE))
 (hmLabelAuto <- showOverallHeatmap(sce_labelAuto, markerList = exist_list, metaData = meta_data))
@@ -498,6 +611,32 @@ if (saving == TRUE){
 }
 ```
 
+```{r Sankey Diagram between cluster and label}
+links <- data.table(table(source=unlist(paste0("Cluster_", seurat_combi$seurat_clusters)), 
+                             target=unlist(seurat_combi$cluster_calibrated))) %>% 
+  .[N != 0,] %>% .[order(-N),]
+
+
+nodes <- data.frame(
+  name=c(as.character(links$source), as.character(links$target)) %>% 
+    unique()
+)
+
+links$IDsource <- match(links$source, nodes$name)-1 
+links$IDtarget <- match(links$target, nodes$name)-1
+
+my_color <- "d3.scaleOrdinal() .domain([' Cluster_0 ',' Cluster_1 ',' Cluster_2 ',' Cluster_3 ',' Cluster_4 ',' Cluster_5 ',' Cluster_6 ',' Cluster_7 ',' Cluster_8 ',' Cluster_9 ',' Cluster_10 ',' Cluster_11 ',' CAM ',' Cell_Cycle ',' DAM ',' HSM ',' IFM-I ',' IFM-II ',' PAM ',' SAM ']) .range([' #FED439FF ',' #709AE1FF ',' #8A9197FF ',' #D2AF81FF ',' #FD7446FF ',' #D5E4A2FF ',' #197EC0FF ',' #F05C3BFF ',' #46732EFF ',' #71D0F5FF ',' #370335FF ',' #075149FF ',' #FF6F00FF ',' #C71000FF ',' #008EA0FF ',' #8A4198FF ',' #5A9599FF ',' #FF6348FF ',' #84D7E1FF ',' #FF95A8FF '])"
+
+
+(sankeyGraph <- sankeyNetwork(Links = links, Nodes = nodes,
+                   Source = "IDsource", Target = "IDtarget",
+                   Value = "N", NodeID = "name", 
+                   sinksRight=FALSE, fontSize = 12, 
+                   fontFamily = "Helvetica", 
+                   colourScale = my_color))
+
+```
+
 
 ```{r Find out top n differentially expressed genes in each object}
 topMatClu <- findTopGenes(sce_cluster, markerlist = exist_list)
@@ -510,6 +649,8 @@ if (saving == TRUE) {
 
 
 ```{r condition composition wrt cell types}
+seurat_combi$orig.ident[which(seurat_combi$orig.ident  == "GpnmbKO_1" | seurat_combi$orig.ident  == "GpnmbKO_2")] <- "GpnmbKO"
+
 (plot_cellTypeCompAuto <- plotDataComposition(seruatObject = seurat_combi, classLabel = "cluster_auto", dataLabel = "orig.ident"))
 (plot_cellTypeCompCali <- plotDataComposition(seruatObject = seurat_combi, classLabel = "cluster_calibrated", dataLabel = "orig.ident"))
 ```
@@ -581,7 +722,6 @@ heatmapmarkersFinal <- c("P2ry12","Cx3cr1","P2ry13","Tmem119","Csf1r","Hexb","Mr
 
 feature_list <- lapply(list(flist_1, flist_2, flist_3, flist_4, flist_5, flist_6, flist_7, flist_8), 
                        function(x) {x[x %in% rownames(seurat_combi)]})
-
 ```
 
 
@@ -613,23 +753,54 @@ HM_ano_list <- plotMarkerList(sce_labelAuto, feature_list, "label_auto", plot_ty
 
 ```{r Vln and ridge plot for one gene, eval = FALSE}
 # Select a random gene for demonstration
-featured_gene <- unlist(exist_list)[12]
+featured_gene <- "P2ry13"
 
 # Vlnplot
-VP_gene <- VlnPlot(seurat_combi, features = featured_gene, 
+VPClu_gene <- VlnPlot(seurat_combi, features = featured_gene, 
                    group.by = "seurat_clusters", cols = pal_simpsons()(16),pt.size = 0) + 
-            xlab("cell type") 
+            xlab("Clusters") 
 
+VPLab_gene <- VlnPlot(seurat_combi, features = featured_gene, 
+                   group.by = "cluster_calibrated", cols = pal_futurama("planetexpress")(12) ,pt.size = 0) + 
+            xlab("Cell type") 
 # ridge plot
-RP_gene <- RidgePlot(seurat_combi, features = featured_gene, group.by = "seurat_clusters", 
+RPClu_gene <- RidgePlot(seurat_combi, features = featured_gene, group.by = "seurat_clusters", 
                      cols = pal_simpsons()(16), sort = FALSE, stack = FALSE)  + 
             xlab("Expression value")
 
-(Plot_gene <- VP_gene + RP_gene)
+RPLab_gene <- RidgePlot(seurat_combi, features = featured_gene, group.by = "cluster_calibrated", 
+                     cols = pal_futurama("planetexpress")(12), sort = FALSE, stack = FALSE)  + 
+            xlab("Expression value") 
+
+(Plot_gene <- (VPClu_gene | VPLab_gene) / (RPClu_gene | RPLab_gene))
 
 # Dimplot for expression level analysis
 color.features <- viridis_pal(option = "C", direction = 1 )(100)
 (DP_gene <- FeaturePlot(seurat_combi, features=unlist(exist_list)[1:2], ncol=2, pt.size = 0.5, cols = color.features) & NoAxes())
+```
+
+```{r Return significantly expressed value}
+Target_celltype <- names(exist_list)[unlist(lapply(exist_list, function(x) featured_gene %in% x))]
+
+seruat_targetcell <- as.numeric(seurat_combi[["RNA"]][featured_gene,])
+
+WTExpression <- data.frame(Expression = seruat_targetcell[which(seurat_combi$orig.ident == "WT" & 
+                                          seurat_combi$cluster_calibrated == Target_celltype)],
+                           Condition = "WT")
+
+KOExpression <- data.frame(Expression = seruat_targetcell[which(seurat_combi$orig.ident == "GpnmbKO" & 
+                                          seurat_combi$cluster_calibrated == Target_celltype)],
+                           Condition = "GpnmbKO")
+
+
+CompareDF <- rbindlist(list(WTExpression, KOExpression))
+
+(Barplot_gene <- ggplot(CompareDF, aes(x=Condition, y=Expression, fill = Condition)) + 
+  geom_boxplot() +
+  geom_signif(comparisons = list(c("WT", "GpnmbKO")), 
+              map_signif_level=TRUE) + 
+    xlab(featured_gene))
+
 ```
 
 # Epilog
